--- a/app/build.gradle
+++ b/app/build.gradle
@@ -65,7 +65,8 @@ dependencies {
     implementation "androidx.camera:camera-camera2:1.0.0-beta12"
     implementation "androidx.camera:camera-lifecycle:1.0.0-beta12"
     implementation "androidx.camera:camera-view:1.0.0-alpha19"
-    implementation "io.coil-kt:coil:1.0.0"
+    implementation "io.coil-kt:coil:1.1.0"
+    implementation 'de.hdodenhof:circleimageview:3.1.0'
 
     testImplementation 'junit:junit:4.13.1'
     androidTestImplementation 'androidx.test.ext:junit:1.1.2'
